# Heisenber_Langevin_Delayed_Equations

./: .gitignore  Article_notebook.ipynb  ME_logistics.py  README.md  WW_logistics.py  final_logistics.py  pyproject.toml
