[project]
name = "heisenber-langevin-delayed-equations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "qutip>=5.2.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
